corrected overflow: scroll property on excerpt container

--- a/css/style.css
+++ b/css/style.css
@@ -1591,7 +1591,11 @@ body.students .home-blog {
 body.students ul li.home-blog-post{
     list-style-type:none;
     height: 600px;
+}
+
+.excerpt {
     overflow-y: scroll;
+    height: 150px;
 }
 
 .home-blog-post {
